# signal_

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile.reminder  Dockerfile.signal-linker  IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  README.md  docker-compose.override.yml  docker-compose.yml  link_signal.py  message.txt  reminder_config.json  reminder_scheduler.py  setup.bat  test_auth.py
api-signal/: .dockerignore  .env.example  .gitignore  .telegram-sender-secret  .telegram-sender-state.campaigns.json  .telegram-sender-state.json  .telegram.session  .vercelignore  Dockerfile  README.md  docker-compose.yml  groups.example.json  pyproject.toml  requirements.txt  test_send.py  vercel.json
api-signal/.serena/: project.yml
api-signal/.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
api-signal/api/: index.py
api-signal/outputs/: README.md
api-signal/src/: index.py
api-signal/src/signal_group_sender/: __init__.py  __main__.py  campaign.py  cli.py  client.py  config.py  groups.py  locking.py  service.py  state.py  telegram_campaigns.py  telegram_cli.py  telegram_client.py  telegram_config.py  telegram_service.py  telegram_targets.py  telegram_web.py  web.py  web_common.py
api-signal/src/signal_group_sender/static/: app.css  app.js  (+1 more)
api-signal/tests/: conftest.py  test_campaign.py  test_cli.py  test_client.py  test_config.py  test_groups.py  test_locking.py  test_service.py  test_state.py  test_telegram_campaigns.py  test_telegram_client.py  test_telegram_service.py  test_telegram_web.py  test_web.py  test_web_common.py
(+4 files in other folders)
