[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-group-sender"
version = "0.1.0"
description = "Safe allowlist-based Signal group broadcaster over signal-cli-rest-api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "telethon>=1.36,<2",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
  "types-requests>=2.32,<3",
]

[project.scripts]
signal-groups = "signal_group_sender.cli:main"
signal-web = "signal_group_sender.web:main"
telegram-groups = "signal_group_sender.telegram_cli:main"
telegram-web = "signal_group_sender.telegram_web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signal_group_sender = [
  "py.typed",
  "static/*",
  "templates/*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["signal_group_sender"]

[[tool.mypy.overrides]]
module = ["telethon", "telethon.*"]
ignore_missing_imports = true
